--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "node-gyp build",
     "test": "make test",
     "test:e2e": "make e2e",
-    "install": "node-gyp rebuild",
+    "install": "node-gyp-build",
     "prepack": "node ./ci/prepublish.js"
   },
   "keywords": [
@@ -41,7 +41,8 @@
   },
   "dependencies": {
     "bindings": "^1.3.1",
-    "nan": "^2.14.0"
+    "nan": "^2.14.0",
+    "node-gyp-build": "^4.3.0"
   },
   "engines": {
     "node": ">=6.0.0"
